add new javascript syntax file

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Js test</title>
+    <title>JavaScript All Methods & Syntax</title>
 </head>
 
 <body>
 
 
 </body>
-<script src="1.js"></script>
+<script src="all-Methods.js"></script>
+<script src="complete-js.js"></script>
 
 </html>
